Fix general spacing

--- a/client/component/homepage/homepage.module.css
+++ b/client/component/homepage/homepage.module.css
@@ -52,8 +52,7 @@
   transition-delay: 100ms;
   font-size: var(--heading-1);
   line-height: 1.3;
-  margin-left: 1rem;
-  z-index: 6;
+  z-index: 4;
 }
 
 .heroContainer h1.activeText {
@@ -77,6 +76,14 @@
 
 .card div img {
   margin: -1rem;
+}
+
+.card div button {
+  background: var(--accent-color-3);
+  color: var(--secondary-color);
+  padding: 0.2rem 2rem;
+  margin-left: 1rem;
+  border-radius: 8px !important;
 }
 
 .card:nth-of-type(even) > img {
