--- a/client/component/layout/header.module.css
+++ b/client/component/layout/header.module.css
@@ -1,5 +1,4 @@
 .navigation {
-  padding: 0 1rem;
   position: absolute;
   top: 0;
   left: 0;
